removed unnecessary files and rearranged folders
