# source/back-end/app/swagger_output.json
@@ -11,7 +11,7 @@
   },
   "servers": [
     {
-      "url": "https://watson-assistant-api.146zmxftsk49.us-south.codeengine.appdomain.cloud",
+      "url": "https://watson-airlines-api.146zmxftsk49.us-south.codeengine.appdomain.cloud",
       "description": "Watson API"
     }
   ],
@@ -130,7 +130,7 @@
         }
       }
     },
-    "/flight/find/{origin}/{destination}": {
+    "/flight/find/{origin}/{destination}/{day}/{month}/{year}": {
       "get": {
         "tags": [
           "Flight"
@@ -143,7 +143,8 @@
             "required": true,
             "schema": {
               "type": "string"
-            }
+            },
+            "description": "Origin IATA code"
           },
           {
             "name": "destination",
@@ -151,7 +152,35 @@
             "required": true,
             "schema": {
               "type": "string"
-            }
+            },
+            "description": "Destination IATA code"
+          },
+          {
+            "name": "day",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Day of the month"
+          },
+          {
+            "name": "month",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Month of the year"
+          },
+          {
+            "name": "year",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Year"
           }
         ],
         "responses": {
